--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.17.9"
+    "@babel/runtime": "^7.17.9",
+    "date-fns": "^2.28.0"
   }
 }
